@@ -37,6 +37,8 @@ the compiler reports it as "possibly unused".
    (<https://bugs.gnu.org/64666>)
 ** Avoid module resolution in 'call-with-new-thread', which could deadlock
    (<https://bugs.gnu.org/62691>)
+** Fix deadlock in 'join-thread' when timeout is hit
+   (<https://bugs.gnu.org/55356>)
 ** 'read-u8' in (scheme base) now defaults to (current-input-port)
    (<https://bugs.gnu.org/62690>)
 ** Hashing of UTF-8 symbols with non-ASCII characters avoids corruption
